# agent

./: .gitignore  CLAUDE.md  CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  LANGCHAIN_AGENT_HARNESS_30_DAY_PLAN.md  README.md  pyproject.toml  python_basics.md  vscode_guide.md
data/: sample_kb.json
enterprise-it-agent/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
enterprise-it-agent/app/: main.py
enterprise-it-agent/app/api/: routes.py
enterprise-it-agent/app/audit/: log.py
enterprise-it-agent/app/chains/: basic_chat.py  chat_model.py  intent_classifier.py
enterprise-it-agent/app/core/: config.py
enterprise-it-agent/app/demo/: acceptance.py  scenarios.py
enterprise-it-agent/app/evals/: dataset.py  runner.py
enterprise-it-agent/app/fine_tuning/: __init__.py  (+2 more)
enterprise-it-agent/docs/: acceptance_report.md  architecture.md  demo_scenarios.md  docker.md  learning_review.md
enterprise_rag_agent/: demo.py
fine_tuning/: 01_concepts.md  02_resources.md  README.md  SUMMARY.md  remaining_plan.md  requirements-finetune.txt  微调.md
fine_tuning/data/: intent_eval_cases.jsonl  intent_sft_train.jsonl  intent_sft_train_v2.jsonl  intent_sft_valid.jsonl  intent_sft_valid_v2.jsonl
fine_tuning/scripts/: ab_compare_intent.py  agent_intent_preview.py  check_env.ps1  check_env.py  eval_lora.py  infer_lora.py  intent_contract.py  intent_provider_demo.py  test_intent_contract.py  train_lora_sft.py
learning/: agent 入门.md
src/enterprise_rag_agent/: agent.py  config.py  reranker.py  schemas.py  tools.py  vectorstore.py
tests/: test_memory.py
(+41 files in other folders)
